syntax = "proto3";
option java_package = "VireProtobuf.vire.cms";
option java_outer_classname = "ConnectionRequestStub";
package vire.cms;

import "vire/utility/BasePayload.proto";
import "vire/utility/InstanceIdentifier.proto";

message ConnectionRequest {

  vire.utility.BasePayload _base = 1; // Base class

  vire.utility.InstanceIdentifier setup_id            = 100; // The setup identifier
  repeated string                 requested_resources = 101; // The paths of the requested resources

}
